# cloudflare_cdn_optimizer

./: Cargo.toml  README.md  cloudflare_cdn_optimizer.service  config.yaml  fastest_cdn_ips.txt
src/: cloudflare_api.rs  config.rs  ip_storage.rs  ip_utils.rs  logging.rs  main.rs  ping.rs  service.rs
