[package]
name = "cloudflare_cdn_optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-service = "0.7.0"
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3.29"
ipnetwork = "0.20.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
serde_yaml = "0.9"
libc = "0.2"
once_cell = "1.19.0"